Update popup.html to change button labels from Chinese to English for better accessibility

--- a/popup.html
+++ b/popup.html
@@ -9,10 +9,10 @@
   <div class="container">
     <h1>Private Cookies Saver</h1>
     <div class="buttons">
-      <button id="saveCookies" class="btn">保存 Cookies</button>
-      <label for="fileInput" class="btn file-label">选择文件</label>
+      <button id="saveCookies" class="btn">Save Cookies</button>
+      <label for="fileInput" class="btn file-label">Choose File</label>
       <input type="file" id="fileInput" accept=".json" style="display: none;">
-      <button id="restoreCookies" class="btn">恢复 Cookies</button>
+      <button id="restoreCookies" class="btn">Restore Cookies</button>
     </div>
     <div id="status" class="status"></div>
   </div>
